#include <string>

struct Category {
    int category_id;        
    std::string name;
    std::string description;
    int age_min;
};
