struct GameCategory {
    int game_id;      
    int category_id;        
};
