#include <string>

struct Collection {
    int collection_id;
    int library_id;       
    std::string name;
};
