#include <ctime>

struct UnlockedAchievement {
  int achievement_id;        
  int library_id;             
  int game_id;               
  time_t date_complete;
};
